--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,11 +9,10 @@
 <body>
   <div class="group">
     <div class="nav">
-      <h1>kevinyaro.ch</h1>
+      <h1><a href="/">kevinyaro.ch</a></h1>
       <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="links">Links</a></li>
         <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="links.html">Links</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </div>
