--- a/views/links.erb
+++ b/views/links.erb
@@ -1,5 +1,21 @@
-<p>Placeholder text</p>
-<p>Placeholder text</p>
+<div class="col">
+  <h2>/ME, ELSEWHERE</h2>
+  <ul>
+    <li><a href="http://ambiguations.tumblr.com">Tumblr</a></li>
+    <li><a href="https://www.facebook.com/kjyaroch">Facebook</a></li>
+    <li><a href="http://www.flickr.com/photos/kvyar/">Flickr</a></li>
+    <li><a href="http://www.last.fm/user/kyaroch">Last.fm</a></li>
+    <li><a href="https://www.goodreads.com/user/show/5957941-kevin-yaroch">Goodreads</a> (sporadically updated)</li>
+  </ul>
+</div>
+<div class="col">
+  <h2>/THIS SITE POWERED BY</h2>
+  <ul>
+    <li><a href="http://www.sinatrarb.com/">Sinatra</a></li>
+    <li><a href="https://github.com/progrium/dokku">Dokku</a></li>
+    <li><a href="https://www.digitalocean.com/">DigitalOcean</a></li>
+  </ul>
+</div>
 
 <% content_for :title do %>
   Links
