--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,8 +12,8 @@
       <h1><a href="/">kevinyaro.ch</a></h1>
       <ul>
         <li><a href="links">Links</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="gallery">Gallery</a></li>
+        <li><a href="contact">Contact</a></li>
       </ul>
     </div>
     <div class="content">
