--- a/views/links.erb
+++ b/views/links.erb
@@ -12,7 +12,8 @@
   <h2>/THIS SITE POWERED BY</h2>
   <ul>
     <li><a href="http://www.sinatrarb.com/">Sinatra</a></li>
-    <li><a href="https://github.com/progrium/dokku">Dokku</a></li>
+    <li><a href="http://unicorn.bogomips.org/">Unicorn</a></li>
+    <li><a href="http://wiki.nginx.org/Main">Nginx</a></li>
     <li><a href="https://www.digitalocean.com/">DigitalOcean</a></li>
   </ul>
 </div>
