--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,5 +21,6 @@
     </div>
   </div>
   <footer><p>&copy; 2014 Kevin Yaroch</p></footer>
+  <script src="statcounter.js"></script>
 </body>
 </html>
