Moved SC to template

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,6 +21,20 @@
     </div>
   </div>
   <footer><p>&copy; 2014 Kevin Yaroch</p></footer>
-  <script src="statcounter.js"></script>
+  <script type="text/javascript">
+  var sc_project=9907617; 
+  var sc_invisible=1; 
+  var sc_security="aac3f1bf"; 
+  var scJsHost = (("https:" == document.location.protocol) ?
+  "https://secure." : "http://www.");
+  document.write("<sc"+"ript type='text/javascript' src='" +
+  scJsHost+
+  "statcounter.com/counter/counter.js'></"+"script>");
+  </script>
+  <noscript><div class="statcounter"><a title="web analytics"
+  href="http://statcounter.com/" target="_blank"><img
+  class="statcounter"
+  src="http://c.statcounter.com/9907617/0/aac3f1bf/1/"
+  alt="web analytics"></a></div></noscript>
 </body>
 </html>
