Deleted Gemfile, changed link wording

--- a/views/links.erb
+++ b/views/links.erb
@@ -6,10 +6,11 @@
     <li><a href="http://www.flickr.com/photos/kvyar/">Flickr</a></li>
     <li><a href="http://www.last.fm/user/kyaroch">Last.fm</a></li>
     <li><a href="https://www.goodreads.com/user/show/5957941-kevin-yaroch">Goodreads</a> (sporadically updated)</li>
+    <li><a href="https://www.librarything.com/profile/kvyar">LibraryThing</a> (ditto)</li>
   </ul>
 </div>
 <div class="col">
-  <h2>/THIS SITE POWERED BY</h2>
+  <h2>/THIS SITE RUNS ON</h2>
   <ul>
     <li><a href="http://www.sinatrarb.com/">Sinatra</a></li>
     <li><a href="http://unicorn.bogomips.org/">Unicorn</a></li>
