--- a/views/contact.erb
+++ b/views/contact.erb
@@ -15,6 +15,7 @@
 <% elsif @sent == :failure %>
   <%= "<p class='failure'>Message could not be sent.</p>" %>
 <% end %>
+<p>Email address is optional, but please include some sort of contact info if you'd like a response.</p>
 </div>
 
 <% content_for :title do %>
