--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title><%= get_title(yield_content :title) %></title>
   <meta name="description" content="Kevin Yaroch's redundant webpage" />
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/styles.css">
 </head>
 <body>
   <div class="group">
