--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,5 +1,6 @@
-<p>There will be content here as soon as I can be bothered to learn jQuery.</p>
-
+<div></div><img class="gallery" src="/<%=@image%>" />
+<p class="caption"><i><%=@caption%></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href="<%=@prev_img%>">&#9664;</a>&nbsp;<a href="<%=@next_img%>">&#9654;</a></p>
+</div>
 <% content_for :title do %>
   Gallery
 <% end %>
