--- a/views/gallery.erb
+++ b/views/gallery.erb
@@ -1,6 +1,5 @@
-<div></div><img class="gallery" src="/<%=@image%>" />
+<img class="gallery" src="/<%=@image%>" />
 <p class="caption"><i><%=@caption%></i>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp<a href="<%=@prev_img%>">&#9664;</a>&nbsp;<a href="<%=@next_img%>">&#9654;</a></p>
-</div>
 <% content_for :title do %>
   Gallery
 <% end %>
