--- a/public/styles.css
+++ b/public/styles.css
@@ -68,12 +68,22 @@ div.formcontainer {
   color: rgb(128, 128, 128);
 }
 
-footer {
+#footer {
   clear: both;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
   font-size: 0.5em;
   padding-top: 50px;
   color: rgb(100, 100, 100);
+}
+
+#white {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 0.5em;
+  color: #FFFFFF;
 }
 
 h1 {
