--- a/views/layout.erb
+++ b/views/layout.erb
@@ -11,16 +11,17 @@
     <div class="nav">
       <h1><a href="/">kevinyaro.ch</a></h1>
       <ul>
-        <li><a href="links">Links</a></li>
-        <li><a href="gallery">Gallery</a></li>
-        <li><a href="contact">Contact</a></li>
+        <li><a href="/links">Links</a></li>
+        <li><a href="/gallery">Gallery</a></li>
+        <li><a href="/contact">Contact</a></li>
       </ul>
     </div>
     <div class="content">
     <%= yield %>
     </div>
+  <p id="footer">&copy; 2014 Kevin Yaroch</p>
+  <p id="white">This website has not been tested in Internet Explorer. There is no mobile version. There will never be a mobile version, because I hate mobile devices. 27&quot; displays for everyone.</p>
   </div>
-  <footer><p>&copy; 2014 Kevin Yaroch</p></footer>
   <script type="text/javascript">
   var sc_project=9907617; 
   var sc_invisible=1; 
