--- a/views/contact.erb
+++ b/views/contact.erb
@@ -16,7 +16,7 @@
   <%= "<p class='failure'>Message could not be sent.</p>" %>
 <% end %>
 <p>Email address is optional, but please include some sort of contact info if you'd like a response. Since this website does
- not (yet) have an SSL certificate, do not include sensitive information.</p>
+ not (yet) support SSL, do not include sensitive information.</p>
 </div>
 
 <% content_for :title do %>
