Added GitHub link

--- a/views/links.erb
+++ b/views/links.erb
@@ -1,9 +1,13 @@
 <div class="col">
-  <h2>/ME, ELSEWHERE</h2>
+  <h2>/THINGS I'VE MADE</h2>
+  <ul>
+    <li><a href="https://github.com/kyaroch">GitHub</a></li>
+    <li><a href="http://www.flickr.com/photos/kvyar/">Flickr</a></li>
+  </ul>
+  <h2>/SOCIAL MEDIA, ETC.</h2>
   <ul>
     <li><a href="http://ambiguations.tumblr.com">Tumblr</a></li>
     <li><a href="https://www.facebook.com/kjyaroch">Facebook</a></li>
-    <li><a href="http://www.flickr.com/photos/kvyar/">Flickr</a></li>
     <li><a href="http://www.last.fm/user/kyaroch">Last.fm</a></li>
     <li><a href="https://www.goodreads.com/user/show/5957941-kevin-yaroch">Goodreads</a> (sporadically updated)</li>
     <li><a href="https://www.librarything.com/profile/kvyar">LibraryThing</a> (ditto)</li>
