Fixed paragraph spacing

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -20,7 +20,7 @@
     <%= yield %>
     </div>
   <p id="footer">&copy; 2014 Kevin Yaroch</p>
-  <p id="white">This website has not been tested in Internet Explorer. There is no mobile version. There will never be a mobile version, because I hate mobile devices. 27&quot; displays for everyone.</p>
+  <p id="white">This website has not been tested in Internet Explorer.</p>
   </div>
   <script type="text/javascript">
   var sc_project=9907617; 
